@@ -1,19 +1,28 @@
 #
-# $Id: GNUmakefile,v 1.1 1998-04-14 18:20:11 d3j191 Exp $
+# $Id: GNUmakefile,v 1.2 1998-04-14 22:34:21 d3j191 Exp $
 #
 
 include ../config/makefile.h
 
 OBJ_OPTIMIZE=prepar.o\
+             pre_ang.o\
              pre_atmscn.o\
+             pre_atnum.o\
+             pre_atrad.o\
              pre_atype.o\
+             pre_bnd.o\
              pre_center.o\
              pre_charge.o\
+             pre_dih.o\
+             pre_dihimp.o\
+             pre_dihsel.o\
              pre_dimens.o\
+             pre_excl.o\
              pre_ffield.o\
              pre_frgsiz.o\
              pre_frgrd.o\
              pre_gensgm.o\
+             pre_imp.o\
              pre_input.o\
              pre_links.o\
              pre_mkfrg.o\
@@ -30,25 +39,19 @@ OBJ_OPTIMIZE=prepar.o\
              pre_pdbsiz.o\
              pre_rdseq.o\
              pre_rdsgm.o\
+             pre_rtdbin.o\
              pre_seqsiz.o\
              pre_sgmfil.o\
              pre_sgmndx.o\
              pre_sgmnum.o\
              pre_sgmsiz.o\
+             pre_short.o\
              pre_term.o\
+             pre_third.o\
+             pre_torang.o\
              pre_wrtseq.o\
              pre_wrtsgm.o\
-             pre_wrttop.o\
-             pre_bnd.o\
-             pre_ang.o\
-             pre_dih.o\
-             pre_dihimp.o\
-             pre_dihsel.o\
-             pre_imp.o\
-             pre_short.o\
-             pre_torang.o\
-             pre_atnum.o\
-             pre_atrad.o
+             pre_wrttop.o
 
 LIBRARY=libprepar.a
 
